# projeto-dataforgerpkr

./: .gitignore  CLAUDE.md  README.md  funcionalidades.txt
.claude/: launch.json
.devcontainer/: devcontainer.json
ip_lookup/data/: ips.txt
ip_lookup/output/: ip_geoloc.csv  ip_geoloc.xlsx
ip_lookup/src/: ip_lookup.py
ip_lookup/tests/: tests.py
legacy/: requirements_legacy.txt
legacy/data/: BUSCAR_JOGOS.csv
legacy/scripts/: collusion.py  ler_csv.py  main.py  models.py
projeto_payjump/: .gitignore  requirements.txt
projeto_payjump/data/: clubes.csv  ligas.csv
projeto_payjump/web/: app.py  início.py  pyproject.toml  requirements.txt
projeto_payjump/web/data/: clubes.csv  ligas.csv  supabase_setup.sql  supabase_setup_security_despesas.sql
projeto_payjump/web/pages/: 10_🎰_Chip_Dumping.py  1_📈_Análises.py  1_📊_Payjump.py  2_📊_Payjump.py  3_🔐_Gerador_de_Notificações.py  4_💲_Ressarcimento.py  5_🌍_Geolocalização.py  5_📝_Relatórios.py  6_💵_Despesas.py  6_💸_Security.py  7_🃏_Hand_History.py  8_🔗_Pipefy.py  9_⚙️_Banco_de_Dados.py  security_notifications.py
projeto_payjump/web/src/: modelos_notificacao.py  notification_templates.py  teste_snowflake.py
projeto_payjump/web/utils/: analise_backend.py  analise_geo.py  analise_snowflake.py  arquivo_utils.py  calculos.py  clubes_db.py  database.py  despesas_db.py  despesas_pdf.py  geolocation.py  hand_history_parser.py  imagem_utils.py  ligas_db.py  mapa_utils.py  pdf_builder.py  pdf_config.py  pipefy_api.py  pipefy_db.py  pipefy_pdf.py  reset_db.py  ressarcimento_db.py  supabase_client.py
(+18 files in other folders)
